# cofeeshop

./: Dockerfile  README.md  data_cleaning.py  main.py  models.py  pyproject.toml
tests/: test_data_cleaning.py
