[tool.poetry]
name = "cofeeshop"
version = "0.1.0"
description = ""
authors = ["Hristo <hhristov94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.94.0"
sqlmodel = "^0.0.8"
uvicorn = "^0.21.0"
loguru = "^0.6.0"
pandas = "^1.5.3"
pytest = "^7.2.2"
tqdm = "^4.65.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
